# ccpathnames

./: .travis.yml  ANNOUNCE  Makefile.am  NEWS  README  README.md  TODO.org  acinclude.m4  configure.ac
cctests/: cctests-assertions.c  cctests.h
doc/: ccpathnames.texi  macros.texi
meta/autoconf/: mmux-check-endianness.m4
meta/scripts/: ccpathnames.pc.in
meta/slackware/: slack-desc.in
meta/travis-ci/: install-ccstructs.sh  install-cctests.sh
src/: ccpathnames-components.c  ccpathnames-conditions.c  ccpathnames-conditions.h  ccpathnames-core.c  ccpathnames-core.h  ccpathnames-endianness.c  ccpathnames-handlers.h  ccpathnames-input-output.c  ccpathnames-internals.h  ccpathnames-manipulation.c  ccpathnames-memory.c  ccpathnames-version.c  ccpathnames.h
tests/: components.c  conditions.c  core.c  iface-destructor.c  iface-dumpable.c  iface-pathname.c  iface-serialisation.c  manipulations.c  trait-destructor.c  trait-dumpable.c  trait-pathname.c  trait-serialisation.c  version.c
